--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,42 @@ z-index: 10;
 .resourcedrop p:hover{
     color: rgb(27, 147, 238); 
 }
+.Burgermenu{
+    width: 95%;
+    height: 100vh;
+    background-color: white;
+    position: absolute;
+    top: 0px;
+    left: 0;
+    z-index: 100;
+    /* bottom: 100; */
+    padding: 10px;
+}
+.Burgermenu p{
+    width: 100%;
+    height: 40px;
+    font-size: 30px;
+    color: #012C6D;
+}
+.Burgermenu button{
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 8px;
+    background-color: rgb(27, 147, 238);
+    color: white;
+
+}
+.Burgermenu p:hover{
+    color: rgb(27, 147, 238); 
+}
+.icon{
+    font-size: 50px;
+  
+}
+.icondiv{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    cursor: pointer;
+}
