--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ z-index: 10;
 }
 .Burgermenu{
     width: 95%;
-    height: 100vh;
+    height: auto;
     background-color: white;
     position: absolute;
     top: 0px;
@@ -74,7 +74,7 @@ z-index: 10;
 }
 .Burgermenu p{
     width: 100%;
-    height: 40px;
+    height: 10px;
     font-size: 30px;
     color: #012C6D;
 }
@@ -99,4 +99,31 @@ z-index: 10;
     display: flex;
     justify-content: flex-end;
     cursor: pointer;
+}
+.companymobile{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.planningmobile{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.resourcesmobile{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+}
+.compa p{
+    font-size: 20px;
+}
+.plannrop p{
+    font-size: 20px;
+}
+.resodrop p{
+    font-size: 20px;
 }
